fix overflow

--- a/frontend/src/assets/css/base.scss
+++ b/frontend/src/assets/css/base.scss
@@ -8,6 +8,7 @@ body {
   margin: 0;
   overscroll-behavior: none;
   //overflow-y: auto;
+  overflow: hidden;
 }
 
 span {
